--- a/src/components/employees-list-item/employees-list-item.css
+++ b/src/components/employees-list-item/employees-list-item.css
@@ -1,22 +1,65 @@
-.btn-sm {
-    margin-right: 5px;
+.list-group-item {
+    padding: 15px 20px;
+    border-bottom: 1px solid #3d5a80;
+}
+
+.list-group-item:last-child {
+    border-bottom: none;
+}
+
+.list-group-item span {
+    line-height: 35px;
+    font-size: 20px;
+    cursor: pointer;
+    min-width: 550px;
+}
+
+.list-group-item input {
+    line-height: 35px;
+    font-size: 20px;
+    text-align: center;
+    border: 0;
+}
+
+.list-group-item button {
+    width: 35px;
+    height: 35px;
+    margin: 3px;
+    font-size: 17px;
     border: none;
+    cursor: pointer;
 }
 
-i.fa-cookie {
-    color: rgb(230, 150, 30)
+.list-group-item .btn-cookie {
+    color: #e09f3e;
 }
 
-i.fa-trash {
-    color: rgb(230, 30, 30)
+.list-group-item .btn-trash {
+    color: #e5383b;
 }
 
-i.fa-star {
-    color: rgb(255, 240, 27)
+.list-group-item .fa-star {
+    width: 35px;
+    height: 35px;
+    text-align: center;
+    line-height: 35px;
+    font-size: 16px;
+    color: #FFD700;
+    transition: 0.3s all;
+    transform: translateX(30px);
+    opacity: 0;
 }
 
-input {
-    display: flex;
-    border: none;
-    width: 80%;
+.list-group-item.like .fa-star {
+    opacity: 1;
+    transform: translateX(0px);
+}
+
+.list-group-item.increase .list-group-item-label,
+.list-group-item.increase .list-group-item-input {
+    color: #e09f3e;
+}
+
+.list-group-item.increase .btn-star {
+    color: #aeaeae;
 }
